<resources>

    <string name="app_name">Oriano Foods</string>

    <string name="don_t_have_an_account_register">Don\'t Have an Account? Register</string>
    <string name="already_have_account_login">already have account? Login.</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="deliver_to">Deliver to  <font color='#FF0000'>*</font></string>
    <string name="city">City  <font color='#FF0000'>*</font></string>
    <string name="area">Area  <font color='#FF0000'>*</font></string>
    <string name="house_no_building_name">House No., Building Name  <font color='#FF0000'>*</font></string>
    <string name="street">Street  <font color='#FF0000'>*</font></string>
    <string name="pincode">Pincode  <font color='#FF0000'>*</font></string>
    <string name="landmark">Landmark</string>
    <string name="preference_file_key">oriano_sharedpref</string>

</resources>